# KURSOVAYA

./: .env_example  .gitignore  README.md  pyproject.toml
data/: answer.json  operations.xlsx
src/: main.py  reports.py  services.py  utils.py  views.py
tests/: conftest.py  test_reports.py  test_services.py  test_views.py
